# TacticalRadioSoftware

./: .gitignore  .gitmodules  build-installer-assets-dpi.ps1  build-installer-legacy.ps1  build-installer-modern.ps1  build-installer-updated.ps1  build-installer.ps1  build-plugin.ps1  package-lock.json  package.json  publish-release.ps1  readme.md  sign-installer.ps1
Extra/: TacticalRadioPluginLegacy.cpp
Old/: SharedState.hpp  TacticalRadioPlugin.cpp
apps/bridge-server/: package.json
apps/bridge-server/src/: index.ts  playerStateStore.ts  txLockStore.ts
apps/bridge-server/src/dev/: fakeRobloxSender.ts  pluginSimulator.ts
apps/mumble-plugin/: CMakeLists.txt  tactical-radio-bridge.mumble_plugin
apps/mumble-plugin/bundle/: manifest.xml
apps/mumble-plugin/src/: AudioRadioEffects.cpp  AudioRadioEffects.hpp  BridgeClient.cpp  BridgeClient.hpp  BridgeConfig.hpp  MumbleIdentity.cpp  MumbleIdentity.hpp  PluginDiagnostics.cpp  PluginDiagnostics.hpp  PluginLogger.cpp  PluginLogger.hpp  PositionalCache.cpp  PositionalCache.hpp  RadioRouter.cpp  RadioRouter.hpp  SharedState.hpp  TacticalRadioPlugin.cpp
apps/roblox-interface/: RadioBridge.client.lua  RadioBridge.server.lua
installer/: TacticalRadio.generated.iss  TacticalRadio.iss
installer/launcher/: App.xaml  App.xaml.cs  GithubUpdateService.cs  LauncherConfig.cs  LauncherPaths.cs  LauncherService.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  README.md  TacticalRadioLauncher.csproj  app.manifest  build-launcher.ps1  dev-launcher.ps1  inno-files-snippet.iss
installer/launcher/publish/: TacticalRadioLauncher.deps.json
installer/launcher_powershell/: TacticalRadioLauncher.cmd  TacticalRadioLauncher.ps1
installer/scripts/: Common.ps1
